[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/PauseMenu/PauseBg.png" type="Texture" id=1]
[ext_resource path="res://Scripts/PauseInteractive.gd" type="Script" id=2]
[ext_resource path="res://Assets/PauseMenu/PressedButtonMenu.png" type="Texture" id=3]
[ext_resource path="res://Assets/PauseMenu/IdleButtonMenu.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/ARCADECLASSIC.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/PauseMenu/HoverButtonMenu.png" type="Texture" id=6]
[ext_resource path="res://Images/Languages.png" type="Texture" id=7]
[ext_resource path="res://Textures/PauseInteractive.tres" type="StyleBox" id=8]
[ext_resource path="res://Images/Arrow.png" type="Texture" id=9]
[ext_resource path="res://Images/Slider.png" type="Texture" id=10]
[ext_resource path="res://Images/Pointer.png" type="Texture" id=11]
[ext_resource path="res://Images/SpeakerMuted.png" type="Texture" id=12]
[ext_resource path="res://Images/Speaker.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 21
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 3 )
normal_map = ExtResource( 3 )
region_rect = Rect2( 0, 0, 166, 10 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 4 )
normal_map = ExtResource( 4 )
region_rect = Rect2( 0, 0, 166, 10 )

[sub_resource type="DynamicFont" id=6]
size = 21
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 10 )
normal_map = ExtResource( 10 )
region_rect = Rect2( 0, 0, 166, 10 )

[node name="PauseInteractive" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 64.0
margin_top = 64.0
margin_right = 1152.0
margin_bottom = 704.0
color = Color( 0.588235, 0.560784, 0.560784, 0.552941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
margin_right = 1088.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/MarginContainer"]
margin_right = 1088.0
margin_bottom = 640.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/CenterContainer"]
margin_left = 544.0
margin_top = 320.0
margin_right = 544.0
margin_bottom = 320.0

[node name="PauseMenu" type="Sprite" parent="ColorRect/MarginContainer/CenterContainer/VBoxContainer"]
position = Vector2( 0, -3.05176e-05 )
scale = Vector2( 0.425, 0.459375 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Resume" type="TextureButton" parent="."]
margin_left = 432.0
margin_top = 152.0
margin_right = 784.0
margin_bottom = 176.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeText" type="Label" parent="Resume"]
margin_right = 168.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ResumeText"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="."]
margin_left = 432.0
margin_top = 184.0
margin_right = 784.0
margin_bottom = 208.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ExitText" type="Label" parent="Exit"]
margin_right = 168.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ExitText"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LanguageButton" type="OptionButton" parent="."]
margin_left = 432.0
margin_top = 248.0
margin_right = 784.0
margin_bottom = 277.0
theme = SubResource( 3 )
custom_icons/arrow = ExtResource( 9 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
keep_pressed_outside = true
text = "Selecciona idioma"
icon = ExtResource( 7 )
flat = true
items = [ "Selecciona idioma", ExtResource( 7 ), false, 0, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="Label" parent="."]
margin_left = 432.0
margin_top = 287.0
margin_right = 600.0
margin_bottom = 310.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sound"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="."]
margin_left = 520.0
margin_top = 290.0
margin_right = 776.0
margin_bottom = 306.0
custom_icons/grabber_highlight = ExtResource( 11 )
custom_icons/grabber = ExtResource( 11 )
custom_styles/slider = SubResource( 7 )
max_value = 50.0

[node name="Speaker" type="TextureButton" parent="."]
margin_left = 440.0
margin_top = 320.0
margin_right = 480.0
margin_bottom = 360.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 13 )
texture_disabled = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="Resume" to="." method="_on_Resume_button_down"]
[connection signal="button_up" from="Resume" to="." method="_on_Resume_button_up"]
[connection signal="pressed" from="Resume" to="." method="_on_Resume_pressed"]
[connection signal="button_down" from="Exit" to="." method="_on_Exit_button_down"]
[connection signal="button_up" from="Exit" to="." method="_on_Exit_button_up"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="item_selected" from="LanguageButton" to="." method="_on_LanguageButton_item_selected"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="Speaker" to="." method="_on_Speaker_pressed"]
